Updated stretch for opaque/fixed navigation

--- a/css/index.css
+++ b/css/index.css
@@ -176,7 +176,9 @@ p {
 .nav-container {
   width: 100%;
   background: #F6F6F6;
+  opacity: 0.7;
   height: 100px;
+  position: fixed;
 }
 .nav-container .navi {
   height: 100%;
