--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,9 @@
 .nav-container {
     width: 100%;
     background: @nav-bg;
+    opacity: .7;
     height: 100px;
+    position: fixed;
   
     .navi {
       height: 100%;
